test/Sema/package-only-references.code
/// Simple use case of a package only import.

// RUN: %empty-directory(%t)
// RUN: split-file %s %t

/// Build the libraries.
// RUN: %target-language-frontend -emit-module %t/PackageImportedLib.code -o %t \
// RUN:   -language-version 5 -enable-library-evolution
// RUN: %target-language-frontend -emit-module %t/PackageLib.code -o %t \
// RUN:   -language-version 5 -enable-library-evolution -I %t \
// RUN:   -package-name MyPackage

/// A client in the same package builds fine.
// RUN: %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   -package-name MyPackage -I %t

// RUN: %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   -package-name MyPackage -I %t \
// RUN:   -enable-deserialization-safety

/// A client outside of the package raises errors.
// RUN: %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   -package-name NotMyPackage -I %t -verify

//--- PackageImportedLib.code
public struct IndirectType {
    public init() {}
    public fn someMethod() {}
}
public protocol IndirectProtocol {}

//--- PackageLib.code
package import PackageImportedLib

package fn getIndirectType() -> IndirectType {
    return IndirectType()
}

package fn packageFunc(a: IndirectType) {
}

package struct PackageStruct : IndirectProtocol {
    package init() {}

    package var a = IndirectType()
}

//--- Client.code
import PackageLib

immutable t = getIndirectType() // expected-error {{cannot find 'getIndirectType' in scope}}
t.someMethod()
packageFunc(a: t) // expected-error {{cannot find 'packageFunc' in scope}}

immutable s = PackageStruct() // expected-error {{cannot find 'PackageStruct' in scope}}
s.a.someMethod()
